--- a/.github/workflows/update-folders.yml
+++ b/.github/workflows/update-folders.yml
@@ -16,7 +16,7 @@ jobs:
           ls -d tournaments/*/ | cut -d/ -f2 > tournaments/folders.json
           node -e '
             const fs = require("fs");
-            const folders = fs.readFileSync("tournaments/folders.txt", "utf8").split("\n").filter(Boolean);
+            const folders = fs.readFileSync("tournaments/folders.json", "utf8").split("\n").filter(Boolean);
             const index = {};
             folders.forEach(folder => {
               try {
